--- a/style.css
+++ b/style.css
@@ -135,8 +135,7 @@ button.link {
 
 main {
   margin-top: 60px;
-  display: flex;
-  justify-content: center;
+  width: 100%;
 }
 
 /* ================================
@@ -147,8 +146,9 @@ main {
   display: flex;
   gap: 40px;
   align-items: flex-start;
-  max-width: 1100px;
-  width: 100%;
+  max-width: 1100px;   /* batas lebar layout */
+  width: fit-content;
+  margin: 0 auto;      /* CENTER HORIZONTAL */
   padding: 0 20px;
 }
 
